# rustcraft

./: Cargo.toml  build.rs
res/: shader.comp  shader.comp.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: buffer.rs  bump_allocator.rs  command.rs  command_buffer.rs  command_pool.rs  compute_pipeline.rs  cube.rs  descriptor_pool.rs  descriptor_set_layout.rs  fence.rs  framebuffer.rs  frames_in_flight.rs  graphics_pipeline.rs  image.rs  image_view.rs  instance.rs  main.rs  notes.txt  pipeline.rs  pipeline_layout.rs  queue.rs  render_pass.rs  sampler.rs  semaphore.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader_module.rs  swapchain.rs  triangle.rs  vertex.rs  vulkan_allocator.rs  vulkan_context.rs
