[package]
name = "rustcraft"
version = "0.1.0"
edition = "2024"

[features]
validation = []

[profile.release]
opt-level = 3         # Optimize for maximum execution speed
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling

[dependencies]
ash = "0.38.0"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
nalgebra-glm = "0.19.0"
rand = "0.9.2"
winit = "0.30.11"
